--- a/pom.xml
+++ b/pom.xml
@@ -208,12 +208,12 @@
   <build>
     <plugins>
       <!--<plugin>-->
-        <!--<groupId>org.apache.maven.plugins</groupId>-->
-        <!--<artifactId>maven-compiler-plugin</artifactId>-->
-        <!--<configuration>-->
-          <!--<source>${java.version}</source>-->
-          <!--<target>${java.version}</target>-->
-        <!--</configuration>-->
+      <!--<groupId>org.apache.maven.plugins</groupId>-->
+      <!--<artifactId>maven-compiler-plugin</artifactId>-->
+      <!--<configuration>-->
+      <!--<source>${java.version}</source>-->
+      <!--<target>${java.version}</target>-->
+      <!--</configuration>-->
       <!--</plugin>-->
 
       <plugin>
@@ -221,24 +221,15 @@
         <artifactId>camel-maven-plugin</artifactId>
         <version>${camel.version}</version>
         <!-- allows to fail if not all routes are fully covered during testing -->
-        <!--
-                <configuration>
-                  <failOnError>true</failOnError>
-                </configuration>
-        -->
+        <configuration>
+          <failOnError>true</failOnError>
+        </configuration>
+
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
-        <configuration>
-          <!--<systemPropertyVariables>-->
-            <!--&lt;!&ndash; Seems to be som kind of conflict with JAXB camel dependencies and JDK8 Jaxb impl.-->
-            <!--https://stackoverflow.com/questions/42499436/classcastexception-cannot-be-cast-to-com-sun-xml-internal-bind-v2-runtime-refle &ndash;&gt;-->
-            <!--<com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>true-->
-            <!--</com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>-->
-          <!--</systemPropertyVariables>-->
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -262,6 +253,27 @@
               <goal>integration-test</goal>
               <goal>verify</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.1.5.RELEASE</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>build-info</goal>
+            </goals>
+            <configuration>
+              <additionalProperties>
+                <encoding.source>UTF-8</encoding.source>
+                <encoding.reporting>UTF-8</encoding.reporting>
+                <java.source>${maven.compiler.source}</java.source>
+                <java.target>${maven.compiler.target}</java.target>
+              </additionalProperties>
+            </configuration>
           </execution>
         </executions>
       </plugin>
